Add parts of old code

--- a/JKit/CMakeLists.txt
+++ b/JKit/CMakeLists.txt
@@ -1,13 +1,23 @@
 set (JKIT_SOURCES
 		Core/String.cpp
 		Core/Exception.cpp
+		Core/Stream.cpp
+		Core/FileStream.cpp
+		Core/MemoryStream.cpp
 		Core/ObjectProperty.cpp
 		Core/Object.cpp)
 
 if (UNIX)
 	set (JKIT_SOURCES ${JKIT_SOURCES}
 			Core/Detail/Posix/Exception.cpp
-			Core/Detail/Posix/LocalFile.cpp)
+			Core/Detail/Posix/LocalFile.cpp
+			Core/Detail/Posix/FileStream.cpp)
+elseif (WIN32)
+	set (JKIT_SOURCES ${JKIT_SOURCES}
+			Core/Detail/Windows/Exception.cpp
+			Core/Detail/Windows/LocalFile.cpp
+			Core/Detail/Windows/FileStream.cpp
+			Core/Detail/Windows/Utils.cpp)
 endif ()
 
 
